7.2.4
    Make all properties dynamic (the System Properties have been deprecated, see README for a configuration example)

7.2.3
    Fix inconsistency with non COMMITTED invoices (requires Kill Bill 0.22.24)

7.2.2
    Bug fix for missing refreshes (https://github.com/killbill/killbill-analytics-plugin/issues/118)
    Fix NULL handling in CSV generation

7.2.1
    Allow date filters for all report types

7.2.0
    Add support for Trino based queries
    Change configuration format to YAML
    Note: DDL change in analytics_reports

7.1.1
    Update to killbill-oss-parent 0.144.49

7.1.0
    Be resilient if a payment plugin doesn't return info on deleted payment methods
    Update to killbill-oss-parent 0.144.18

7.0.8
    Update parent pom.xml

7.0.6
    Refresh payment rows when CBA is distributed

7.0.5
    Updates for Kill Bill 0.21.5

7.0.4
    https://github.com/killbill/killbill-analytics-plugin/issues/100

7.0.3
    performance: introduce INVOICES group, enhance sync primitives and lower internal default # threads

7.0.2
    Update to latest oss pom.xml

7.0.1
    https://github.com/killbill/killbill-analytics-plugin/issues/89
    https://github.com/killbill/killbill-analytics-plugin/issues/90

7.0.0
    Initial release for Kill Bill 0.21.x

6.0.1
    Add property org.killbill.billing.plugin.analytics.ignoredGroups

6.0.0
    Initial release for Kill Bill 0.20.x

5.1.4
    Update to killbill-oss-parent 0.141.97

5.1.3
    Cleanup unused Account#isNotifiedForInvoices field
    Update to killbill-oss-parent 0.141.94

5.1.2
    Update to killbill-oss-parent 0.141.90

5.1.1
    Fix catalog APIs invocation
    Add healthcheck
    Update to killbill-oss-parent 0.141.85

5.1.0
    Update base pom.xml

5.0.6
    Integration with RO APIs
    Update to killbill-oss-parent 0.141.62

5.0.5
    Performance: re-use cached bundles when computing blocking history

5.0.4
    Performance: cache catalog information
    Update to killbill-oss-parent 0.141.54

5.0.3