@@ -49,6 +49,7 @@ curl -v \
   refreshDelaySeconds: 10
   lockAttemptRetries: 100
   rescheduleIntervalOnLockSeconds: 10
+  enablePartialRefreshes: true
   blacklist:
     - 468e5259-6635-4988-9ae7-3d79b11fc6ed
     - f7da09af-8593-4a88-b6d4-1c4ebf807103
