@@ -1,8 +1,8 @@
 /*
  * Copyright 2010-2014 Ning, Inc.
  * Copyright 2014-2020 Groupon, Inc
- * Copyright 2020-2020 Equinix, Inc
- * Copyright 2014-2020 The Billing Project, LLC
+ * Copyright 2020-2021 Equinix, Inc
+ * Copyright 2014-2021 The Billing Project, LLC
  *
  * The Billing Project licenses this file to you under the Apache License, version 2.0
  * (the "License"); you may not use this file except in compliance with the
@@ -24,36 +24,45 @@ import java.util.UUID;
 import org.killbill.billing.ObjectType;
 import org.killbill.billing.notification.plugin.api.ExtBusEvent;
 import org.killbill.billing.notification.plugin.api.ExtBusEventType;
+import org.killbill.billing.plugin.analytics.AnalyticsJobHierarchy.Group;
 import org.killbill.notificationq.api.NotificationEvent;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 public class AnalyticsJob implements NotificationEvent {
 
+    private final Group group;
     private final ExtBusEventType eventType;
     private final ObjectType objectType;
     private final UUID objectId;
     private final UUID accountId;
     private final UUID tenantId;
 
-    public AnalyticsJob(final ExtBusEvent extBusEvent) {
-        this(extBusEvent.getEventType(),
+    public AnalyticsJob(final ExtBusEvent extBusEvent, final Group group) {
+        this(group,
+             extBusEvent.getEventType(),
              extBusEvent.getObjectType(),
              extBusEvent.getObjectId(),
              extBusEvent.getAccountId(),
              extBusEvent.getTenantId());
     }
 
-    public AnalyticsJob(@JsonProperty("eventType") final ExtBusEventType eventType,
+    public AnalyticsJob(@JsonProperty("group") final Group group,
+                        @JsonProperty("eventType") final ExtBusEventType eventType,
                         @JsonProperty("objectType") final ObjectType objectType,
                         @JsonProperty("objectId") final UUID objectId,
                         @JsonProperty("accountId") final UUID accountId,
                         @JsonProperty("tenantId") final UUID tenantId) {
+        this.group = group;
         this.eventType = eventType;
         this.objectType = objectType;
         this.objectId = objectId;
         this.accountId = accountId;
         this.tenantId = tenantId;
+    }
+
+    public Group getGroup() {
+        return group;
     }
 
     public ExtBusEventType getEventType() {
@@ -79,7 +88,8 @@ public class AnalyticsJob implements NotificationEvent {
     @Override
     public String toString() {
         final StringBuilder sb = new StringBuilder("AnalyticsJob{");
-        sb.append("eventType=").append(eventType);
+        sb.append("group=").append(group);
+        sb.append(", eventType=").append(eventType);
         sb.append(", objectType=").append(objectType);
         sb.append(", objectId=").append(objectId);
         sb.append(", accountId=").append(accountId);
@@ -105,6 +115,9 @@ public class AnalyticsJob implements NotificationEvent {
         if (eventType != job.eventType) {
             return false;
         }
+        if (group != null ? !group.equals(job.group) : job.group != null) {
+            return false;
+        }
         if (objectId != null ? !objectId.equals(job.objectId) : job.objectId != null) {
             return false;
         }
@@ -121,6 +134,7 @@ public class AnalyticsJob implements NotificationEvent {
     @Override
     public int hashCode() {
         int result = eventType != null ? eventType.hashCode() : 0;
+        result = 31 * result + (group != null ? group.hashCode() : 0);
         result = 31 * result + (objectType != null ? objectType.hashCode() : 0);
         result = 31 * result + (objectId != null ? objectId.hashCode() : 0);
         result = 31 * result + (accountId != null ? accountId.hashCode() : 0);
