@@ -1,5 +1,8 @@
 7.2.4
     Make all properties dynamic (the System Properties have been deprecated, see README for a configuration example)
+    Introduce lockAttemptRetries, rescheduleIntervalOnLockSeconds, and enablePartialRefreshes (per tenant)
+    Introduce org.killbill.analytics.lockSleepMilliSeconds (global)
+    Performance improvements
 
 7.2.3
     Fix inconsistency with non COMMITTED invoices (requires Kill Bill 0.22.24)
